@@ -1,3 +1,9 @@
+2007-06-03  Ross Burton  <ross@burtonini.com>
+
+	* src/sound-juicer.h:
+	* src/sj-main.c:
+	Don't manually create an "all" debug category, GLib does that for you.
+
 2007-05-14  Ross Burton  <ross@burtonini.com>
 
 	* configure.ac:
